fixed mobile layout issue

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ nav .right a span{
 
 .skill-section .text{
   text-align: center;
-  margin-bottom: 20;
+  margin-bottom: 20px;
 }
 
 .skill-section .cells{
@@ -420,9 +420,12 @@ nav .right a span{
 
   }
 
+  /*---new updated line----*/
   .skill-section .cells .cell{
 
-    width: 140px;
+    width: auto;
+    min-width: 130px;
+    padding: 8px 12px;
 
   }
 
@@ -446,16 +449,17 @@ nav .right a span{
 
   /* Contact */
 
-  .contact-section{
-
-    padding: 0 20px;
-
-  }
-
   .contact-section .group{
 
     flex-direction: column;
 
+  }
+
+  /*----new updated lines----*/
+  .hero-section .text .links{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   }
 
 }
@@ -490,5 +494,6 @@ nav .right a span{
     width: 120px;
 
   }
+
 
 }
